--- a/index.html
+++ b/index.html
@@ -157,9 +157,10 @@
                     <div class="animated fadeInDown visible" data-animation="fadeInDown" data-delay="500">
 
                      <a href="https://github.com/sanchittechnogeek">
-                      <img class="img-circle" src="./img/ceo2.jpg" height="128" width="128" alt="Triambikey Joshi">
+                      <img class="img-circle" src="./img/ceo2.jpg" height="128" width="128" alt="Sanchit Mishra">
                       <h5>Sanchit Mishra</h5>
                        </a> <p> < Designer / Developer > </p>
+                        <a href="https://sanchittechnogeek.github.io/articles/about/"><p> About me</p></a>
                      </div>
                    </div>
 
