Made some changes as suggested for asksusi.com

--- a/pages/main.html
+++ b/pages/main.html
@@ -6,8 +6,12 @@
         </div>
         <!-- End row -->
         <div class="row hero-content text-center">
-        <br><br><br><br><br>
-            <img src="./assets/images/susi.svg" height="10%" width="10%" alt="Features-img">
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <!-- Landing page image <img src="./assets/images/susi.svg" height="10%" width="10%" alt="Features-img"> -->
             <h1 class="">Meet Susi - your own personal assistant! </h1>
             <h4>Ask it questions. Tell it to do things.</h4>
             <h4 class="hero-text2">It’s your own personal assistant, always ready to help.</h4>
@@ -100,10 +104,13 @@
         <!-- end row -->
         <div class="row text-center">
             <div class="col-sm-12">
-            <br><br>
-            <img src="./assets/images/open-source.png" height="15%" width="15%">
-            <br><br><br>
-            <a href="https://opensource.org/licenses/GPL-3.0/"><img src="https://badges.frapsoft.com/os/gpl/gpl-175x39.png?v=103"></a>
+                <br>
+                <br>
+                <img src="./assets/images/open-source.png" height="15%" width="15%">
+                <br>
+                <br>
+                <br>
+                <a href="https://opensource.org/licenses/GPL-3.0/"><img src="https://badges.frapsoft.com/os/gpl/gpl-175x39.png?v=103"></a>
             </div>
         </div>
         <!-- end row -->
@@ -138,7 +145,7 @@
         <div class="row text-center">
             <div class="col-sm-12">
                 <h2 class="title">Reviews</h2>
-                <p class="slogan">Here's what are <b>Beta</b> Testers say!</p>
+                <p class="slogan">Here's what our <b>Beta</b> Testers say!</p>
             </div>
             <!-- end Col -->
         </div>
@@ -148,9 +155,12 @@
                     <div class="carousel slide" data-ride="carousel" id="quote-carousel">
                         <!-- Bottom Carousel Indicators -->
                         <ol class="carousel-indicators">
+                            <!-- Quote 1: -->
                             <li data-target="#quote-carousel" data-slide-to="0" class="active"></li>
-                            <li data-target="#quote-carousel" data-slide-to="1"></li>
-                            <li data-target="#quote-carousel" data-slide-to="2"></li>
+                            <!-- Quote 2:
+                            <li data-target="#quote-carousel" data-slide-to="1"></li> -->
+                            <!-- Quote 3:
+                            <li data-target="#quote-carousel" data-slide-to="2"></li> -->
                         </ol>
                         <!-- Carousel Slides / Quotes -->
                         <div class="carousel-inner">
@@ -163,25 +173,27 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Quote 2 -->
+                            <!-- Quote 2:
                             <div class="item">
                                 <div class="row">
                                     <div class="col-sm-12">
-                                        <p>&ldquo;Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Aenean lacinia bibendum nulla sed consectetur. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.&rdquo;</p>
+                                        <p>&ldquo;&rdquo;</p>
                                         <small><strong>student name</strong></small>
                                     </div>
                                 </div>
-                            </div>
-                            <!-- Quote 3 -->
+                            </div>-->
+                            <!-- Quote 3:
                             <div class="item">
                                 <div class="row">
                                     <div class="col-sm-12">
-                                        <p>&ldquo;Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas faucibus mollis interdum. Cras mattis consectetur purus sit amet fermentum.&rdquo;</p>
+                                        <p>&ldquo;&rdquo;
+                                        </p>
                                         <small><strong>student name</strong></small>
                                     </div>
                                 </div>
-                            </div>
+                            </div>-->
                         </div>
+                        <!-- END: Carousel Slides / Quotes -->
                     </div>
                 </div>
             </div>
@@ -196,11 +208,8 @@
         <div class="row text-center">
             <div class="col-sm-12">
                 <h2 class="title">Download the <em>new</em> app</h2>
-                <p class="slogan">Susi AI app is now available for IOS and Android smartphones.</p>
+                <p class="slogan">Susi AI app is now available for Android smartphones.</p>
                 <ul class="list-inline client-list pt40">
-                    <li>
-                        <a href="#"><img width="150" class="badge-store" src="./assets/images/app-store-badge.svg" title="Download from App store"></a>
-                    </li>
                     <li>
                         <a href="https://github.com/fossasia/susi_android/raw/apk/susi-debug.apk"><img class="badge-store" src="./assets/images/github.svg" height="70%" width="70%" title="Download from Github"></a>
                     </li>
