Added logo in main.html

--- a/pages/main.html
+++ b/pages/main.html
@@ -11,7 +11,8 @@
             <br>
             <br>
             <br>
-            <!-- Landing page image <img src="./assets/images/susi.svg" height="10%" width="10%" alt="Features-img"> -->
+            <!-- Main Screen Logo (uncomment when needed)
+             <img src="./assets/images/susi-logo-original.svg" height="15%" width="15%" alt="Features-img"> -->
             <h1 class="">Meet Susi - your own personal assistant! </h1>
             <h4>Ask it questions. Tell it to do things.</h4>
             <h4 class="hero-text2">It’s your own personal assistant, always ready to help.</h4>
